# cCore

./: CMakeLists.txt  main.c
constants/: opcodes.h
src/login/: loginOpCodeHandler.c  loginOpCodeHandler.h  loginServer.c  loginServer.h  loginStructs.h
src/login/loginUtils/: loginStructs.h
src/srp/: srp6.c  srp6.h
src/utils/: bufferReader.c  bufferReader.h
